# integrate_zero

./: .gitignore  CLAUDE.md  README.md  hierarchical-rl-integration-project.md  integrate_zero_proposal.md  pyproject.toml
docs/plans/: 2026-03-03-integrate-zero-demo-design.md  2026-03-03-integrate-zero-impl-plan.md
integrate_zero/data/: __init__.py  dataset.py  generator.py  prefix.py  vocabulary.py
integrate_zero/eval/: evaluate.py  textbook.py
integrate_zero/mcts/: search.py
integrate_zero/model/: decoding.py  transformer.py
integrate_zero/train/: rl.py  supervised.py
integrate_zero/verify/: verifier.py
scripts/: generate_data.py  inspect_data.py  train.py
tests/: test_dataset.py  test_decoding.py  test_evaluate.py  test_generator.py  test_mcts.py  test_mcts_integration.py  test_model.py  test_prefix.py  test_rl.py  test_smoke.py  test_supervised.py  test_verifier.py  test_vocabulary.py
