[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "integrate-zero"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
