[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "integrate-zero"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "sympy>=1.12",
    "tensorboard>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["integrate_zero*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
